# StructuredWebAuditCrawler

./: License  README.md  audit.py  audit_runner.py  config.py  master_sheet_bot.txt  meta_score.py  performance.py  pyproject.toml  readme.md  report_writer.py  schema.py  semantic_alignment.py  setup.cfg  site_report.py  trust.py  zero_trust.py  📜 Structured Web Auditor.txt
